--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "fs-extra": "^11.3.3",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "yauzl": "^3.2.0"
   },
   "keywords": []
